--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx @tailwindcss/cli -i ./css/input.css -o ./css/output.css --watch"
+    "build": "tailwindcss -i ./css/input.css -o ./css/output.css"
+
+
   },
   "keywords": [],
   "author": "",
